--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -7,14 +7,13 @@
       google.load("jquery", "1.4.1");
     </script>
     <h1 align="center"> Meal Maniac
-      <img src = "http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20">
     </h1>
     <h2 align="center">
     Settings
     </h2>
   </head>
   <body>
-  <form id="save" align="center" method="POST">
+  <form id="settings" align="center" method="POST">
     <div>
       <input type="text" placeholder="First Name" size="20"/>
       <input type="text" placeholder="Last Name" size="20"/>
@@ -26,8 +25,15 @@
       <input type="tel" placeholder="Phone Number" size="40"/>
     </div>
     <div>
+      Addresses?
+      <select>
+        <option value="default">Default</option>
+        <!--Add the other addresses somehow?-->
+      </select>
+    </div>
+    <div>
       Delivery Time :   
-      <input type="number" min="30" value="60" size="3" step="5"/>
+      <input type="number" min="30" max="120" value="60" size="3" step="5"/>
     </div>
     <div>
       Tip :
@@ -38,8 +44,41 @@
       Yes <input type="radio" name="group1" value="Yes">
       No <input type="radio" name="group1" value="No" checked>
     </div>
+    <div>
+      Gluten-Free? 
+      Yes <input type="radio" name="group2" value="Yes">
+      No <input type="radio" name="group2" value="No" checked>
+    </div>
+    <div>
+      Other Allergies? 
+      <input type="text" placeholder="Peanuts, chocolate, etc">
+      <input type="button" value="Add" onclick="addAllergy()">
+    </div>
+    <div>
+      Which Card?
+      <select>
+        <option value="default">Default</option>
+        <!--Add the other addresses somehow?-->
+      </select>
+    </div>
+    <div>
+      <input type="button" value="Add New Address" onclick="addAddress()">
+    </div>
+    <div>
+      <input type="button" value="Add New Credit Card" onclick="addCard()">
+    </div>
+    <script>
+      form = getElementById("settings");
+      function addAllergy() {
+        //Add an allergy to the database of allergies
+      }
+      function addAddress() {
+        //Add an address to the address database
+      }
+      function addCard() {
+        //Add a credit card to the database
+      }
+    </script>
   </form>
-    
-
   </body>
 </html>
