Added css header

--- a/frontend/frontPage.html
+++ b/frontend/frontPage.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html> 
 <html>  
   <head>
-    <title>Meal MANIAC</title>
-    <script src="http://www.google.com/jsapi"></script>
-    <script>
-      google.load("jquery", "1.4.1");
-    </script>
-    <h1 align="center"> Meal Maniac
-    </h1>
+    <title>Front</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap-3.0.0/dist/css/custom.css" rel="stylesheet" media="screen">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
+      <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
     <form id = "loginForm" align="center" action ="" method="POST">
