--- a/frontend/settings.html
+++ b/frontend/settings.html
@@ -80,5 +80,15 @@
       }
     </script>
   </form>
+  <script>
+function goBack()
+  {
+  window.history.back()
+  }
+</script>
+
+<body>
+<button onclick="goBack()">Go Back</button>
+</body>
   </body>
 </html>
