--- a/frontend/finish.html
+++ b/frontend/finish.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html> 
 <html>  
   <head>
-    <title>Meal MANIAC</title>
-    <script src="http://www.google.com/jsapi"></script>
-    <script>
-      google.load("jquery", "1.4.1");
-    </script>
-    <h1 align="center"> Meal Maniac
-      <img src = "http://www.clker.com/cliparts/j/V/R/4/3/s/cog-cogwheel-gear-zahnrad-md.png" height="20" width="20">
-    </h1>
+    <title>Finish</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap-3.0.0/dist/css/custom.css" rel="stylesheet" media="screen">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
+      <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
+    <![endif]-->
   </head>
-  <body>
-    <div align="center"> <b>Lucky You!</b> </div>
-    <div align="center"> Restaurant Name </div>
-    <div align="center"> Restaurant Phone </div>
-    <div align="center"> Dish </div>
-    <div align="center"> Price </div>
+  <body align="center">
+    <div>
+      Meal Maniac
+      <a href="settings.html">
+        <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
+      </a>
+    </div>
+    <div> <b>Lucky You!</b> </div>
+    <div> Restaurant Name </div>
+    <div> Restaurant Phone </div>
+    <div> Dish </div>
+    <div> Price </div>
 
-    <form id = "approval" align="center" action ="" method="POST">
+    <form id = "approval" align="center" action ="order.html" method="POST">
       <div>
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/1/13/Facebook_like_thumb.png" height="50" width="50" onclick="like()">
         <input type="image" src = "http://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Not_facebook_not_like_thumbs_down.png/512px-Not_facebook_not_like_thumbs_down.png" height="50" width="50" onclick="dislike()">
