--- a/frontend/order.html
+++ b/frontend/order.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html> 
 <html>  
   <head>
-    <title>Meal Maniac </title>
-    <script src="http://www.google.com/jsapi"></script>
-    <link rel="stylesheet" type="text/css" href="order.css"/>
-    <script>
-      google.load("jquery", "1.4.1");
-    </script>
+    <title>Order</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="bootstrap-3.0.0/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="bootstrap-3.0.0/dist/css/custom.css" rel="stylesheet" media="screen">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="bootstrap-3.0.0/assets/js/html5shiv.js"></script>
+      <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body align="center">
     <div>
       Meal Maniac
-      <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right">
+      <a href="settings.html">
+        <img src="http://files.softicons.com/download/system-icons/web0.2ama-icons-by-chrfb/png/96x96/Settings.png" height="20" width="20" align="right" class="img-responsive" alt="Responsive image">
+      </a>
     </div>
     <div>
      <select id = "addressList">
@@ -33,13 +39,13 @@
       </script>
     </div>
     <span style="white-space:nowrap">
-      <img style="float:left" src="https://cdn1.iconfinder.com/data/icons/socialmediabookmark/buttons/facebook_button.png" height="21" width="61">
+      <img style="float:left" src="https://cdn1.iconfinder.com/data/icons/socialmediabookmark/buttons/facebook_button.png" height="21" width="61" class="img-responsive" alt="Responsive image">
       <div style="float:right">
         <input type=range min=0 max=50 value=50 step=0.01 onchange="urlChange(value)">
         <script>
           function urlChange(distance) {
             if (distance < 5) {
-              window.location = "http://google.com"
+              window.location = "finish.html"
             }
           }
         </script>
