--- a/frontend/order.html
+++ b/frontend/order.html
@@ -12,7 +12,7 @@
       <script src="bootstrap-3.0.0/assets/js/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body align="center">
+  <body align="center" onLoad="displayOptions()">
     <div>
       Meal Maniac
       <a href="settings.html">
@@ -20,7 +20,7 @@
       </a>
     </div>
     <div>
-     <select id = "addressList" onclick="displayOptions()">
+     <select id = "addressList">
        <option value = "1">Home</option>
        <option value = "2">School</option>
        <option value = "3">Drug den</option>
@@ -29,8 +29,6 @@
      <script>
       
       function displayOptions(){
-        alert("this is working");
-        document.getElementById('addressList').innerHTML+="<option value='10'>Testcase</option>";
         var addresses = localStorage["addresses"]
         for (int i=0;i<addresses.length;i++){
           document.getElementById('addressList').innerHTHML+="<option value = '"+i+"'>" +addresses[i]+"</option>";
@@ -44,6 +42,7 @@
     <div>
       $<output id=price>25</output>
       <script>
+
         function outputUpdate(price) {
         document.querySelector('#price').value = price;
         }
